--- a/clashroyale.html
+++ b/clashroyale.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google Adsence  -->
+<meta name="google-adsense-account" content="ca-pub-9035612598345255">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Clash Royale Best Decks for Arena 5–10 (2025 Beginner Guide)</title>
