--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google Adsence  -->
+<meta name="google-adsense-account" content="ca-pub-9035612598345255">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Gaming NikuPlays Blog</title>
@@ -90,7 +92,8 @@
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
       </svg>
     </button>
-  </div>
+  </div>  
+
 </header>
 
 <!-- MAIN CONTENT -->
