--- a/brawlstars.html
+++ b/brawlstars.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google Adsence  -->
+<meta name="google-adsense-account" content="ca-pub-9035612598345255">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Brawl Stars Best Brawlers for Beginners (2025 Updated Guide)</title>
