--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 </style>
 </head>
 <body class="bg-gray-950 text-white relative">
-
+<!-- Adsence Script -->
+    <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 <!-- Dynamic animated shapes -->
 <div class="animated-shapes" id="shapesContainer"></div>
 
