--- a/brawlstars.html
+++ b/brawlstars.html
@@ -74,6 +74,8 @@
 </style>
 </head>
 <body class="bg-gray-950 text-white relative">
+<!-- Adsence Script -->
+    <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 
 <!-- Generate animated shapes -->
 <div class="animated-shapes" id="shapesContainer"></div>
